--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
-    "pg": "^8.14.1"
+    "node-fetch": "^3.3.2",
+    "pg": "^8.14.1",
+    "ws": "^8.18.2"
   },
   "keywords": [],
   "author": "",
